2022-02-09  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.35.3 release

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2022-02-08  Jonathan Bedard  <jbedard@apple.com>

        [git-webkit] Allow repositories to declare their bug trackers
        https://bugs.webkit.org/show_bug.cgi?id=236306
        <rdar://problem/88633018>

        Reviewed by Dewei Zhu.

        * metadata/trackers.json: Added.

2022-02-08  Adrian Perez de Castro  <aperez@igalia.com>

        [WPE] Running distcheck with USE_SOUP2=OFF fails to install documentation
        https://bugs.webkit.org/show_bug.cgi?id=236235

        Reviewed by Carlos Garcia Campos.

        * Source/PlatformWPE.cmake: Use WPE_API_DOC_VERSION instead of WPE_API_VERSION for the documentation.

2022-02-07  Adrian Perez de Castro  <aperez@igalia.com>

        [CMake] REGRESSION(r288994): Linker does not get passed --disable-new-dtags
        https://bugs.webkit.org/show_bug.cgi?id=236205

        Reviewed by Darin Adler.

        * Source/cmake/OptionsCommon.cmake: Arrange passing --disable-new-dtags to linkers that
        are known to support the option. While at it, reorganize a bit how detected linker/archiver
        features are printed out for better readability.

2022-02-03  Myles C. Maxfield  <mmaxfield@apple.com>

        Two bopomofo tone marks are not moved to the correct place in vertical text with a particular bopomofo font
        https://bugs.webkit.org/show_bug.cgi?id=235257
        <rdar://problem/87625596>

        Reviewed by Darin Adler.

        Thank you so much to Bobby Tung and But Ko for reporting this bug and providing a test font for it!!!

        * metadata/contributors.json:

2022-02-03  Elliott Williams  <emw@apple.com>

        Add Elliott Williams to contributors.json

        Unreviewed.

        * metadata/contributors.json:

2022-01-24  Jonathan Bedard  <jbedard@apple.com>
